<resources>
    <string name="app_name">無紙化3.0</string>
    <string name="action_settings">Settings</string>
    <string name="system_tip">系統溫馨提示</string>
    <string name="btn_ok">確定</string>
    <string name="btn_no">取消</string>
    <string name="cancel_tip">退出提示</string>
    <string name="cancel_message">您確定要退出當前頁面？</string>
    <string name="connect_overtime">連接超時，請重試！</string>
    <string name="APK_update">發現新版本</string>
    <string name="download_apk">APK下載</string>
    <string name="APK_update_content">更新內容：</string>
    <string name="savepath">保存路徑：</string>
    <string name="savedownload_success">保存下載信息成功！</string>
    <string name="btn_updateAPK">更新</string>
    <string name="account_hint">賬號</string>
    <string name="pwd_hint">密碼</string>
    <string name="forget_pwd">忘記密碼?</string>
    <string name="account_login">登錄</string>
    <string name="language_chinese">中文</string>
    <string name="language_english">英文</string>
    <string name="logonname_empty">賬號不允許為空！</string>
    <string name="password_empty">密碼不允許為空！</string>
    <string name="login_success">登陸成功！</string>
    <string name="logonname_notexist">此賬號不存在！</string>
    <string name="pwd_error_nolock">密碼輸入錯誤！您還可以輸錯次數：</string>
    <string name="pwd_error_islock">此賬號已被鎖定！三十分鐘后將自動解鎖</string>
    <string name="error_locked">此賬號已被鎖定！</string>
    <string name="logonname_password_error">賬號或密碼錯誤！</string>
    <string name="connect_network_failed">無法連接服務器，請檢查網絡！</string>
    <string name="network_exception">網絡連接異常！\n</string>
    <string name="loading">玩命加载中...</string>
    <string name="pwd_regular">您的密码需要修改\n密碼規則：長度為8-16位，必須含有大小寫字母、特殊字符和數字</string>
    <string name="updatepwd_now">現在去修改</string>
    <string name="copyright">©CNSBG SFC一課 AppTeam</string>
    <string name="connectedto">已連接到</string>
    <string name="mobile_network">移動網絡</string>
    <string name="disconnect">无网络連接</string>
    <string name="updatepwd_title">賬號密碼修改</string>
    <string name="oldpwd_hint">請輸入原密碼</string>
    <string name="newpwd_hint">請輸入新密碼</string>
    <string name="confirmpwd_hint">請再次輸入新密碼以驗證</string>
    <string name="updatepwd">修改密碼</string>
    <string name="oldpwd_empty">舊密碼不允許為空！</string>
    <string name="newpwd_empty">新密碼不允許為空！</string>
    <string name="confirmpwd_empty">驗證密碼不允許為空！</string>
    <string name="oldpwd_error">舊密碼輸入不正確，請重新輸入！</string>
    <string name="confirmpwd_identical">驗證密碼和新密碼不一致！</string>
    <string name="newpwd_illegal">您設置的新密碼不符合規則，請重新輸入！</string>
    <string name="updatepwd_failed">修改密碼失敗，請重試！</string>
    <string name="updatepwd_success">修改密碼成功！</string>
    <string name="forgetpwd_title">忘記密碼</string>
    <string name="loginname_hint">請輸入要找回密碼的賬號</string>
    <string name="email_hint">請輸入郵箱地址</string>
    <string name="getemail">獲取郵箱地址</string>
    <string name="findpwd">找回密碼</string>
    <string name="loginname_notexist">此賬號不存在！</string>
    <string name="email_empty">郵箱地址不允許為空！</string>
    <string name="findpwd_success">找回密碼成功！密碼已發送至您的郵箱</string>
    <string name="sendemail_failed">找回密碼失敗！請確認郵箱地址是否填寫正確</string>
    <string name="findpwd_failed">找回密碼失敗！請確認賬號是否填寫正確</string>
    <string name="home_title">首頁</string>
    <string name="checkmanage_title">審核</string>
    <string name="account_title">賬戶</string>
    <string name="pressagain_exit">再按一次退出APP</string>
    <string name="eg_logonname">工號：</string>
    <string name="eg_name">賬號名稱？</string>
    <string name="employeeinfo">員工信息</string>
    <string name="pwdupdate">修改密碼</string>
    <string name="versionupdate">版本更新</string>
    <string name="feedback">意見反饋</string>
    <string name="contactus">聯繫我們</string>
    <string name="logoff">切換賬號</string>
    <string name="gallery">圖庫</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="picture_notexist">照片不存在！</string>
    <string name="uploadheadportrait_success">頭像設置成功！</string>
    <string name="uploadheadportrait_failed">頭像設置失敗！</string>
    <string name="newversion">有新版本</string>
    <string name="nonewversion">已是最新版本</string>
    <string name="versioncode">版本號：</string>
    <string name="versionname">版本名稱：</string>
    <string name="contactus_message">
        SFC一課APPTeam\n
                       電話：187781\n
                       郵箱：supporter.team@mail.\nfoxconn.com               
   	</string>
    <string name="logoff_message">是否退出當前賬號？</string>
    <string name="turnleft">左轉</string>
    <string name="turnright">右轉</string>
    <string name="saveimage">保存</string>
    <string name="canceledit">取消</string>
    <string name="accountinfo_title">賬號信息</string>
    <string name="accountinfo_save">保存</string>
    <string name="account_logonname">工號</string>
    <string name="account_chinesename">中文名</string>
    <string name="account_englishname">英文名</string>
    <string name="account_job">職務</string>
    <string name="account_ext">電話</string>
    <string name="account_email">郵箱</string>
    <string name="account_userlevel">用戶等級</string>
    <string name="account_master">主管工號</string>
    <string name="account_team">Team</string>
    <string name="account_section">工站</string>
    <string name="account_SBU">SBU</string>
    <string name="account_mfg">製造處</string>
    <string name="account_BU">BU</string>
    <string name="account_site">廠區</string>
    <string name="account_lasteditby">編輯人</string>
    <string name="account_lasteditdt">編輯時間</string>
    <string name="chinesename_empty">中文名不允許為空！</string>
    <string name="englishname_empty">英文名不允許為空！</string>
    <string name="ext_empty">電話不允許為空！</string>
    <string name="mail_empty">郵箱不允許為空！</string>
    <string name="chinesename_illegal">中文名請輸入中文！</string>
    <string name="englishname_illegal">英文名請輸入英文！</string>
    <string name="ext_lengthnotenough">電話長度至少是5位！</string>
    <string name="email_illegal">郵箱地址不合法！</string>
    <string name="saveaccountinfo_success">保存賬號信息成功！</string>
    <string name="saveaccountinfo_failed">保存賬號信息失敗！請重試</string>
    <string name="addemployee">添加</string>
    <string name="searchemployee_hint">請輸入查詢用戶的工號或姓名</string>
    <string name="column_logonname">工號</string>
    <string name="column_name">姓名</string>
    <string name="column_job">職務</string>
    <string name="column_master">主管</string>
    <string name="totalrownum">記錄條數：</string>
    <string name="getemployeeinfo_failed">獲取員工信息失敗！請重試</string>
    <string name="employeedetail_title">員工詳細信息</string>
    <string name="userlevel_instruction">等級說明：0-普通員工，1-組長和線長，2-課長以上級別</string>
    <string name="addemployee_title">添加員工</string>
    <string name="addemployee_submit">提交</string>
    <string name="logonname_hint">請輸入工號，不少於5個字符</string>
    <string name="chinesename_hint">請輸入中文名，不超過7個字符</string>
    <string name="englishname_hint">請輸入英文名，不超過20個字符</string>
    <string name="ext_hint">請輸入電話號碼，不少於5個數字</string>
    <string name="emails_hint">請輸入郵箱地址，不超過50個字符</string>
    <string name="userlevel_hint">請輸入主管工號，至少5個字符</string>
    <string name="logonnames_empty">工號不允許為空！</string>
    <string name="master_empty">主管工號不允許為空！</string>
    <string name="logonname_lengthnotenough">工號長度至少是5位！</string>
    <string name="master_lengthnotenough">主管工號長度至少是5位！</string>
    <string name="addemployee_success">添加員工賬號成功！\n初始密碼為：</string>
    <string name="employee_exist">該員工賬號已存在！請確認</string>
    <string name="addemployee_failed">添加員工賬號失敗！請重試</string>
    <string name="publishfeedback_hint">我也來發表意見</string>
    <string name="publish">發表</string>
    <string name="getfeedback_failed">獲取歷史意見反饋記錄失敗！請重試</string>
    <string name="publish_empty">發表內容不允許為空！</string>
    <string name="publish_success">發表意見成功！</string>
    <string name="publish_failed">發表意見失敗！請重試</string>
    <string name="scan_tip">請將取景框對準二維碼進行掃描</string>
    <string name="scanqr">掃碼點檢</string>
    <string name="bureport_title">已导入報表</string>
    <string name="bu_notfound">該廠區還未配置BU</string>
    <string name="allreport">已導入報表</string>
    <string name="reportnum">報表編號</string>
    <string name="reportname">報表名稱</string>
    <string name="getreport_failed">該BU暫無報表</string>
    <string name="totalreport_count">配置報表總數：</string>
    <string name="qrcode_notexist">系統中不存在這個二維碼！</string>
    <string name="check_notpermission">您暫無權限點檢！</string>
    <string name="report_checked">此二維碼該時段已被點檢！點檢人：</string>
    <string name="select_checkreport">選擇點檢報表</string>
    <string name="check_item">點檢項目</string>
    <string name="wo_hint">請輸入工單或SN</string>
    <string name="rno">編號：</string>
    <string name="rno2">點檢編號</string>
    <string name="floorname">樓層：</string>
    <string name="linename">線別：</string>
    <string name="skuno">機種：</string>
    <string name="skuversion">版本：</string>
    <string name="checkid">節次：</string>
    <string name="qty">批量：</string>
    <string name="side">面別：</string>
    <string name="checkremark">備註：</string>
    <string name="deviation">deviation：</string>
    <string name="deviation_hint">請輸入deviation</string>
    <string name="side_hint">請輸入面別</string>
    <string name="checktype">類型：</string>
    <string name="reportchecktype">點檢類型：</string>
    <string name="maintencetime">選擇時間</string>
    <string name="getparams_success">已帶出標準參數</string>
    <string name="inputkeyword_hint">請輸入關鍵字</string>
    <string name="inputtrsn_hint">請輸入TR_SN</string>
    <string name="inputsn_hint">請輸入SN</string>
    <string name="checkcontent_hint">請輸入點檢內容</string>
    <string name="inputok_hint">請輸入OK</string>
    <string name="sn_error">輸入SN有誤！</string>
    <string name="wo_error">輸入工單有誤！</string>
    <string name="report_notconfig">該報表還未配置，請聯繫課長進行配置！</string>
    <string name="getshift_failed">獲取班別和節次失敗！</string>
    <string name="side_notsupport">暫無面別數據！</string>
    <string name="params_notsupport">ME未提供參數！</string>
    <string name="check_tip">點檢提示</string>
    <string name="submitfailed_notconfig">該報表還未配置，請配置后提交！</string>
    <string name="submitfailed_inputwo">請輸入工單！</string>
    <string name="submitfailed_wowrong">請輸入正確的工單！</string>
    <string name="submitfailed_notgetparam">未獲取到標準參數，不允許提交！</string>
    <string name="submitfailed_deviationempty">請輸入deviation！</string>
    <string name="submitfailed_sideempty">請輸入面別！</string>
    <string name="deviationinput_title">輸入deviation</string>
    <string name="sideinput_title">輸入side</string>
    <string name="submitfailed_contentempty">項參數實際值不能為空，請輸入</string>
    <string name="submitfailed_notinrange">項參數實際值不在標準參數範圍內，請修正</string>
    <string name="submitfailed_notmatch">項參數實際值與標準參數不匹配，請修正</string>
    <string name="submitfailed_notnumber">項參數實際值不是數字或格式有誤，請修正</string>
    <string name="submitfailed_nottakephoto">項配置了拍照，請拍照</string>
    <string name="check_success">點檢成功！</string>
    <string name="input_onlyok">只能輸入OK！</string>
    <string name="submitcheck_title">點檢提交</string>
    <string name="btn_submitcheck">提交</string>
    <string name="submitcheck_success">點檢成功！</string>
    <string name="submitcheck_exist">該時段已被點檢！</string>
    <string name="submitcheck_failed">提交點檢信息失敗！請檢查網絡狀況或稍後重試</string>
    <string name="openline">開線</string>
    <string name="changeline">換線</string>
    <string name="master_hint">請輸入簽核人的工號或姓名</string>
    <string name="clickitem_selectcheckby">點擊以下條目選擇簽核人</string>
    <string name="selected_checkby">已選擇的簽核人（默認為上級主管）</string>
    <string name="submitexception_title">提交異常</string>
    <string name="btn_nextstep">下一步</string>
   	<string name="checkby_add">添加</string>
   	<string name="checkby_delete">刪除</string>
   	<string name="getcheckby_failed">暫無可選擇的簽核人！</string>
   	<string name="checkby_notselect">請選擇簽核人！</string>
   	<string name="exception_hint">請輸入異常信息</string>
   	<string name="check_exception">產線點檢出現異常</string>
    <string name="btn_submitexception">提交異常</string>
    <string name="check_number">點檢編號</string>
    <string name="record_node">節次</string>
    <string name="auditor">簽核人</string>
    <string name="state">狀態</string>
    <string name="password_rule">密碼規則：</string>
    <string name="password_rule_detail">密碼長度必須為8-16位，並且含有大小寫字母、特殊字符和數字</string>
</resources>