<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical" >
    <!--修改頭像菜單  -->
    <Button 
        style="@style/customer_greenbtn_style"
        android:id="@+id/btnGallery"
        android:text="@string/gallery"
        />
    <Button 
        style="@style/customer_greenbtn_style"
        android:id="@+id/btnCamera"
        android:text="@string/camera"
        android:layout_marginTop="5dp"
        />
    <Button 
        style="@style/customer_greenbtn_style"
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />
    

</LinearLayout>
