<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<!--修改密碼界面 -->
    <include layout="@layout/layout_title" />
    <View
        style="@style/divide_line_style"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:background="@drawable/input"
        android:orientation="vertical" >

        <!-- android:ems="10"表示EditText内最多只显示12个字符，超出不显示 -->
        <!-- android:singleLine="true"表示不能全部显示时，后面用“…”来表示 -->

        <com.foxconn.paperless.ui.widget.ClearEditText
            android:id="@+id/etOldPwd"
            style="@style/customer_edittext_style"
            android:layout_width="match_parent"
            android:hint="@string/oldpwd_hint"
            android:maxLength="16"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:textSize="@dimen/common_size" >

            <requestFocus />
        </com.foxconn.paperless.ui.widget.ClearEditText>

        <!-- 横线 -->

        <View
            style="@style/divide_line_style" />

        <com.foxconn.paperless.ui.widget.ClearEditText
            android:id="@+id/etNewPwd"
            style="@style/customer_edittext_style"
            android:layout_width="match_parent"
            android:hint="@string/newpwd_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="5dp"
            android:textSize="@dimen/common_size" />

        <!-- 横线 -->

        <View
            style="@style/divide_line_style" />

        <com.foxconn.paperless.ui.widget.ClearEditText
            android:id="@+id/etConfirmNewPwd"
            style="@style/customer_edittext_style"
            android:layout_width="match_parent"
            android:hint="@string/confirmpwd_hint"
            android:inputType="textPassword"
            android:maxLength="16"
            android:paddingLeft="5dp"
            android:textSize="@dimen/common_size" />
    </LinearLayout>
    <View
            style="@style/divide_line_style" />

    <Button
        android:id="@+id/btnUpdatePwd"
        style="@style/customer_greenbtn_style"
        android:layout_margin="15dp"
        android:text="@string/updatepwd"/>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_rule"/>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/password_rule_detail"
            android:textColor="@color/gray"/>
        
    </LinearLayout>

</LinearLayout>