<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <include layout="@layout/layout_title" />
    <!-- 簽核基本信息頁面 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/size_16"
            android:text="@string/record_node"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:textSize="@dimen/size_16"
            android:text="@string/check_number"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="@dimen/size_16"
            android:text="@string/auditor"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="@dimen/size_16"
            android:text="@string/state"/>
        <TextView 
            android:layout_width="22dp"
            android:layout_height="22dp"/>
    </LinearLayout>
    <View 
        style="@style/divide_line_style"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">
        <ListView
            android:id="@+id/lvBaseInfo" 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/gray_line"
            android:dividerHeight="0.2dp"
            android:layout_gravity="center">
        </ListView>
    </LinearLayout>
</LinearLayout>
