<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<!-- 圖片編輯界面 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <view
            android:id="@+id/viewImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            class="com.foxconn.paperless.editimage.EditImageView" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/gl_modify_avatar_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/btnTurnLeft"
            style="@style/customer_greenbtn_style"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/turnleft" />

        <Button
            android:id="@+id/btnSave"
            style="@style/customer_greenbtn_style"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="2"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:text="@string/saveimage" />

        <Button
            android:id="@+id/btnTurnRight"
            style="@style/customer_greenbtn_style"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="2"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:text="@string/turnright" />
        <Button
            android:id="@+id/btnCancel"
            style="@style/customer_greenbtn_style"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="5dp"
            android:text="@string/canceledit" />

    </LinearLayout>

</FrameLayout>